syntax = "proto3";
package edges;

option go_package = "github.com/snple/kirara/pb/edges;edges";

import "user_message.proto";
import "generic_message.proto";

message LoginRequest {
    string name = 1;
    string pass = 2;
}

message LoginResponse {
    pb.User user = 1;
}

message ChangePassRequest {
    string id = 1;
    string old_pass = 2;
    string new_pass = 3;
}

message ForceChangePassRequest {
    string id = 1;
    string new_pass = 2;
}

service AuthService {
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc ChangePass(ChangePassRequest) returns (pb.Message) {}
    rpc ForceChangePass(ForceChangePassRequest) returns (pb.Message) {}
}
